tpcas.output
État 99 conflits: 1 décalage/réduction


Grammaire

    0 $accept: Prog $end

    1 Prog: DeclVars DeclFoncts

    2 DeclVars: DeclVars TYPE Declarateurs ';'
    3         | %empty

    4 Declarateurs: Declarateurs ',' IDENT
    5             | IDENT

    6 DeclFoncts: DeclFoncts DeclFonct
    7           | DeclFonct

    8 DeclFonct: EnTeteFonct Corps

    9 EnTeteFonct: TYPE IDENT '(' Parametres ')'
   10            | VOID IDENT '(' Parametres ')'

   11 Parametres: VOID
   12           | ListTypVar

   13 ListTypVar: ListTypVar ',' TYPE IDENT
   14           | TYPE IDENT

   15 Corps: '{' DeclVars SuiteInstr '}'

   16 SuiteInstr: SuiteInstr Instr
   17           | %empty

   18 Instr: LValue '=' Exp ';'
   19      | IF '(' Exp ')' Instr
   20      | IF '(' Exp ')' Instr ELSE Instr
   21      | WHILE '(' Exp ')' Instr
   22      | IDENT '(' Arguments ')' ';'
   23      | RETURN Exp ';'
   24      | RETURN ';'
   25      | '{' SuiteInstr '}'
   26      | ';'

   27 Exp: Exp OR TB
   28    | TB

   29 TB: TB AND FB
   30   | FB

   31 FB: FB EQ M
   32   | M

   33 M: M ORDER E
   34  | E

   35 E: E ADDSUB T
   36  | T

   37 T: T DIVSTAR F
   38  | F

   39 F: ADDSUB F
   40  | '!' F
   41  | '(' Exp ')'
   42  | NUM
   43  | CHARACTER
   44  | LValue
   45  | IDENT '(' Arguments ')'

   46 LValue: IDENT

   47 Arguments: ListExp
   48          | %empty

   49 ListExp: ListExp ',' Exp
   50        | Exp


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    '!' (33) 40
    '(' (40) 9 10 19 20 21 22 41 45
    ')' (41) 9 10 19 20 21 22 41 45
    ',' (44) 4 13 49
    ';' (59) 2 18 22 23 24 26
    '=' (61) 18
    '{' (123) 15 25
    '}' (125) 15 25
    error (256)
    CHARACTER (258) 43
    NUM (259) 42
    IDENT (260) 4 5 9 10 13 14 22 45 46
    TYPE (261) 2 9 13 14
    VOID (262) 10 11
    EQ (263) 31
    ORDER (264) 33
    ADDSUB (265) 35 39
    DIVSTAR (266) 37
    OR (267) 27
    AND (268) 29
    IF (269) 19 20
    WHILE (270) 21
    ELSE (271) 20
    RETURN (272) 23 24


Non-terminaux, suivis des règles où ils apparaissent

    $accept (26)
        à gauche: 0
    Prog <node> (27)
        à gauche: 1
        à droite: 0
    DeclVars <node> (28)
        à gauche: 2 3
        à droite: 1 2 15
    Declarateurs <node> (29)
        à gauche: 4 5
        à droite: 2 4
    DeclFoncts <node> (30)
        à gauche: 6 7
        à droite: 1 6
    DeclFonct <node> (31)
        à gauche: 8
        à droite: 6 7
    EnTeteFonct <node> (32)
        à gauche: 9 10
        à droite: 8
    Parametres <node> (33)
        à gauche: 11 12
        à droite: 9 10
    ListTypVar <node> (34)
        à gauche: 13 14
        à droite: 12 13
    Corps <node> (35)
        à gauche: 15
        à droite: 8
    SuiteInstr <node> (36)
        à gauche: 16 17
        à droite: 15 16 25
    Instr <node> (37)
        à gauche: 18 19 20 21 22 23 24 25 26
        à droite: 16 19 20 21
    Exp <node> (38)
        à gauche: 27 28
        à droite: 18 19 20 21 23 27 41 49 50
    TB <node> (39)
        à gauche: 29 30
        à droite: 27 28 29
    FB <node> (40)
        à gauche: 31 32
        à droite: 29 30 31
    M <node> (41)
        à gauche: 33 34
        à droite: 31 32 33
    E <node> (42)
        à gauche: 35 36
        à droite: 33 34 35
    T <node> (43)
        à gauche: 37 38
        à droite: 35 36 37
    F <node> (44)
        à gauche: 39 40 41 42 43 44 45
        à droite: 37 38 39 40
    LValue <node> (45)
        à gauche: 46
        à droite: 18 44
    Arguments <node> (46)
        à gauche: 47 48
        à droite: 22 45
    ListExp <node> (47)
        à gauche: 49 50
        à droite: 47 49


État 0

    0 $accept: • Prog $end

    $défaut  réduction par utilisation de la règle 3 (DeclVars)

    Prog      aller à l'état 1
    DeclVars  aller à l'état 2


État 1

    0 $accept: Prog • $end

    $end  décalage et aller à l'état 3


État 2

    1 Prog: DeclVars • DeclFoncts
    2 DeclVars: DeclVars • TYPE Declarateurs ';'

    TYPE  décalage et aller à l'état 4
    VOID  décalage et aller à l'état 5

    DeclFoncts   aller à l'état 6
    DeclFonct    aller à l'état 7
    EnTeteFonct  aller à l'état 8


État 3

    0 $accept: Prog $end •

    $défaut  accepter


État 4

    2 DeclVars: DeclVars TYPE • Declarateurs ';'
    9 EnTeteFonct: TYPE • IDENT '(' Parametres ')'

    IDENT  décalage et aller à l'état 9

    Declarateurs  aller à l'état 10


État 5

   10 EnTeteFonct: VOID • IDENT '(' Parametres ')'

    IDENT  décalage et aller à l'état 11


État 6

    1 Prog: DeclVars DeclFoncts •
    6 DeclFoncts: DeclFoncts • DeclFonct

    TYPE  décalage et aller à l'état 12
    VOID  décalage et aller à l'état 5

    $défaut  réduction par utilisation de la règle 1 (Prog)

    DeclFonct    aller à l'état 13
    EnTeteFonct  aller à l'état 8


État 7

    7 DeclFoncts: DeclFonct •

    $défaut  réduction par utilisation de la règle 7 (DeclFoncts)


État 8

    8 DeclFonct: EnTeteFonct • Corps

    '{'  décalage et aller à l'état 14

    Corps  aller à l'état 15


État 9

    5 Declarateurs: IDENT •
    9 EnTeteFonct: TYPE IDENT • '(' Parametres ')'

    '('  décalage et aller à l'état 16

    $défaut  réduction par utilisation de la règle 5 (Declarateurs)


État 10

    2 DeclVars: DeclVars TYPE Declarateurs • ';'
    4 Declarateurs: Declarateurs • ',' IDENT

    ';'  décalage et aller à l'état 17
    ','  décalage et aller à l'état 18


État 11

   10 EnTeteFonct: VOID IDENT • '(' Parametres ')'

    '('  décalage et aller à l'état 19


État 12

    9 EnTeteFonct: TYPE • IDENT '(' Parametres ')'

    IDENT  décalage et aller à l'état 20


État 13

    6 DeclFoncts: DeclFoncts DeclFonct •

    $défaut  réduction par utilisation de la règle 6 (DeclFoncts)


État 14

   15 Corps: '{' • DeclVars SuiteInstr '}'

    $défaut  réduction par utilisation de la règle 3 (DeclVars)

    DeclVars  aller à l'état 21


État 15

    8 DeclFonct: EnTeteFonct Corps •

    $défaut  réduction par utilisation de la règle 8 (DeclFonct)


État 16

    9 EnTeteFonct: TYPE IDENT '(' • Parametres ')'

    TYPE  décalage et aller à l'état 22
    VOID  décalage et aller à l'état 23

    Parametres  aller à l'état 24
    ListTypVar  aller à l'état 25


État 17

    2 DeclVars: DeclVars TYPE Declarateurs ';' •

    $défaut  réduction par utilisation de la règle 2 (DeclVars)


État 18

    4 Declarateurs: Declarateurs ',' • IDENT

    IDENT  décalage et aller à l'état 26


État 19

   10 EnTeteFonct: VOID IDENT '(' • Parametres ')'

    TYPE  décalage et aller à l'état 22
    VOID  décalage et aller à l'état 23

    Parametres  aller à l'état 27
    ListTypVar  aller à l'état 25


État 20

    9 EnTeteFonct: TYPE IDENT • '(' Parametres ')'

    '('  décalage et aller à l'état 16


État 21

    2 DeclVars: DeclVars • TYPE Declarateurs ';'
   15 Corps: '{' DeclVars • SuiteInstr '}'

    TYPE  décalage et aller à l'état 28

    $défaut  réduction par utilisation de la règle 17 (SuiteInstr)

    SuiteInstr  aller à l'état 29


État 22

   14 ListTypVar: TYPE • IDENT

    IDENT  décalage et aller à l'état 30


État 23

   11 Parametres: VOID •

    $défaut  réduction par utilisation de la règle 11 (Parametres)


État 24

    9 EnTeteFonct: TYPE IDENT '(' Parametres • ')'

    ')'  décalage et aller à l'état 31


État 25

   12 Parametres: ListTypVar •
   13 ListTypVar: ListTypVar • ',' TYPE IDENT

    ','  décalage et aller à l'état 32

    $défaut  réduction par utilisation de la règle 12 (Parametres)


État 26

    4 Declarateurs: Declarateurs ',' IDENT •

    $défaut  réduction par utilisation de la règle 4 (Declarateurs)


État 27

   10 EnTeteFonct: VOID IDENT '(' Parametres • ')'

    ')'  décalage et aller à l'état 33


État 28

    2 DeclVars: DeclVars TYPE • Declarateurs ';'

    IDENT  décalage et aller à l'état 34

    Declarateurs  aller à l'état 10


État 29

   15 Corps: '{' DeclVars SuiteInstr • '}'
   16 SuiteInstr: SuiteInstr • Instr

    IDENT   décalage et aller à l'état 35
    IF      décalage et aller à l'état 36
    WHILE   décalage et aller à l'état 37
    RETURN  décalage et aller à l'état 38
    ';'     décalage et aller à l'état 39
    '{'     décalage et aller à l'état 40
    '}'     décalage et aller à l'état 41

    Instr   aller à l'état 42
    LValue  aller à l'état 43


État 30

   14 ListTypVar: TYPE IDENT •

    $défaut  réduction par utilisation de la règle 14 (ListTypVar)


État 31

    9 EnTeteFonct: TYPE IDENT '(' Parametres ')' •

    $défaut  réduction par utilisation de la règle 9 (EnTeteFonct)


État 32

   13 ListTypVar: ListTypVar ',' • TYPE IDENT

    TYPE  décalage et aller à l'état 44


État 33

   10 EnTeteFonct: VOID IDENT '(' Parametres ')' •

    $défaut  réduction par utilisation de la règle 10 (EnTeteFonct)


État 34

    5 Declarateurs: IDENT •

    $défaut  réduction par utilisation de la règle 5 (Declarateurs)


État 35

   22 Instr: IDENT • '(' Arguments ')' ';'
   46 LValue: IDENT •

    '('  décalage et aller à l'état 45

    $défaut  réduction par utilisation de la règle 46 (LValue)


État 36

   19 Instr: IF • '(' Exp ')' Instr
   20      | IF • '(' Exp ')' Instr ELSE Instr

    '('  décalage et aller à l'état 46


État 37

   21 Instr: WHILE • '(' Exp ')' Instr

    '('  décalage et aller à l'état 47


État 38

   23 Instr: RETURN • Exp ';'
   24      | RETURN • ';'

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    ';'        décalage et aller à l'état 52
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    Exp     aller à l'état 55
    TB      aller à l'état 56
    FB      aller à l'état 57
    M       aller à l'état 58
    E       aller à l'état 59
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 39

   26 Instr: ';' •

    $défaut  réduction par utilisation de la règle 26 (Instr)


État 40

   25 Instr: '{' • SuiteInstr '}'

    $défaut  réduction par utilisation de la règle 17 (SuiteInstr)

    SuiteInstr  aller à l'état 63


État 41

   15 Corps: '{' DeclVars SuiteInstr '}' •

    $défaut  réduction par utilisation de la règle 15 (Corps)


État 42

   16 SuiteInstr: SuiteInstr Instr •

    $défaut  réduction par utilisation de la règle 16 (SuiteInstr)


État 43

   18 Instr: LValue • '=' Exp ';'

    '='  décalage et aller à l'état 64


État 44

   13 ListTypVar: ListTypVar ',' TYPE • IDENT

    IDENT  décalage et aller à l'état 65


État 45

   22 Instr: IDENT '(' • Arguments ')' ';'

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 48 (Arguments)

    Exp        aller à l'état 66
    TB         aller à l'état 56
    FB         aller à l'état 57
    M          aller à l'état 58
    E          aller à l'état 59
    T          aller à l'état 60
    F          aller à l'état 61
    LValue     aller à l'état 62
    Arguments  aller à l'état 67
    ListExp    aller à l'état 68


État 46

   19 Instr: IF '(' • Exp ')' Instr
   20      | IF '(' • Exp ')' Instr ELSE Instr

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    Exp     aller à l'état 69
    TB      aller à l'état 56
    FB      aller à l'état 57
    M       aller à l'état 58
    E       aller à l'état 59
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 47

   21 Instr: WHILE '(' • Exp ')' Instr

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    Exp     aller à l'état 70
    TB      aller à l'état 56
    FB      aller à l'état 57
    M       aller à l'état 58
    E       aller à l'état 59
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 48

   43 F: CHARACTER •

    $défaut  réduction par utilisation de la règle 43 (F)


État 49

   42 F: NUM •

    $défaut  réduction par utilisation de la règle 42 (F)


État 50

   45 F: IDENT • '(' Arguments ')'
   46 LValue: IDENT •

    '('  décalage et aller à l'état 71

    $défaut  réduction par utilisation de la règle 46 (LValue)


État 51

   39 F: ADDSUB • F

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    F       aller à l'état 72
    LValue  aller à l'état 62


État 52

   24 Instr: RETURN ';' •

    $défaut  réduction par utilisation de la règle 24 (Instr)


État 53

   41 F: '(' • Exp ')'

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    Exp     aller à l'état 73
    TB      aller à l'état 56
    FB      aller à l'état 57
    M       aller à l'état 58
    E       aller à l'état 59
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 54

   40 F: '!' • F

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    F       aller à l'état 74
    LValue  aller à l'état 62


État 55

   23 Instr: RETURN Exp • ';'
   27 Exp: Exp • OR TB

    OR   décalage et aller à l'état 75
    ';'  décalage et aller à l'état 76


État 56

   28 Exp: TB •
   29 TB: TB • AND FB

    AND  décalage et aller à l'état 77

    $défaut  réduction par utilisation de la règle 28 (Exp)


État 57

   30 TB: FB •
   31 FB: FB • EQ M

    EQ  décalage et aller à l'état 78

    $défaut  réduction par utilisation de la règle 30 (TB)


État 58

   32 FB: M •
   33 M: M • ORDER E

    ORDER  décalage et aller à l'état 79

    $défaut  réduction par utilisation de la règle 32 (FB)


État 59

   34 M: E •
   35 E: E • ADDSUB T

    ADDSUB  décalage et aller à l'état 80

    $défaut  réduction par utilisation de la règle 34 (M)


État 60

   36 E: T •
   37 T: T • DIVSTAR F

    DIVSTAR  décalage et aller à l'état 81

    $défaut  réduction par utilisation de la règle 36 (E)


État 61

   38 T: F •

    $défaut  réduction par utilisation de la règle 38 (T)


État 62

   44 F: LValue •

    $défaut  réduction par utilisation de la règle 44 (F)


État 63

   16 SuiteInstr: SuiteInstr • Instr
   25 Instr: '{' SuiteInstr • '}'

    IDENT   décalage et aller à l'état 35
    IF      décalage et aller à l'état 36
    WHILE   décalage et aller à l'état 37
    RETURN  décalage et aller à l'état 38
    ';'     décalage et aller à l'état 39
    '{'     décalage et aller à l'état 40
    '}'     décalage et aller à l'état 82

    Instr   aller à l'état 42
    LValue  aller à l'état 43


État 64

   18 Instr: LValue '=' • Exp ';'

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    Exp     aller à l'état 83
    TB      aller à l'état 56
    FB      aller à l'état 57
    M       aller à l'état 58
    E       aller à l'état 59
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 65

   13 ListTypVar: ListTypVar ',' TYPE IDENT •

    $défaut  réduction par utilisation de la règle 13 (ListTypVar)


État 66

   27 Exp: Exp • OR TB
   50 ListExp: Exp •

    OR  décalage et aller à l'état 75

    $défaut  réduction par utilisation de la règle 50 (ListExp)


État 67

   22 Instr: IDENT '(' Arguments • ')' ';'

    ')'  décalage et aller à l'état 84


État 68

   47 Arguments: ListExp •
   49 ListExp: ListExp • ',' Exp

    ','  décalage et aller à l'état 85

    $défaut  réduction par utilisation de la règle 47 (Arguments)


État 69

   19 Instr: IF '(' Exp • ')' Instr
   20      | IF '(' Exp • ')' Instr ELSE Instr
   27 Exp: Exp • OR TB

    OR   décalage et aller à l'état 75
    ')'  décalage et aller à l'état 86


État 70

   21 Instr: WHILE '(' Exp • ')' Instr
   27 Exp: Exp • OR TB

    OR   décalage et aller à l'état 75
    ')'  décalage et aller à l'état 87


État 71

   45 F: IDENT '(' • Arguments ')'

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    $défaut  réduction par utilisation de la règle 48 (Arguments)

    Exp        aller à l'état 66
    TB         aller à l'état 56
    FB         aller à l'état 57
    M          aller à l'état 58
    E          aller à l'état 59
    T          aller à l'état 60
    F          aller à l'état 61
    LValue     aller à l'état 62
    Arguments  aller à l'état 88
    ListExp    aller à l'état 68


État 72

   39 F: ADDSUB F •

    $défaut  réduction par utilisation de la règle 39 (F)


État 73

   27 Exp: Exp • OR TB
   41 F: '(' Exp • ')'

    OR   décalage et aller à l'état 75
    ')'  décalage et aller à l'état 89


État 74

   40 F: '!' F •

    $défaut  réduction par utilisation de la règle 40 (F)


État 75

   27 Exp: Exp OR • TB

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    TB      aller à l'état 90
    FB      aller à l'état 57
    M       aller à l'état 58
    E       aller à l'état 59
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 76

   23 Instr: RETURN Exp ';' •

    $défaut  réduction par utilisation de la règle 23 (Instr)


État 77

   29 TB: TB AND • FB

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    FB      aller à l'état 91
    M       aller à l'état 58
    E       aller à l'état 59
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 78

   31 FB: FB EQ • M

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    M       aller à l'état 92
    E       aller à l'état 59
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 79

   33 M: M ORDER • E

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    E       aller à l'état 93
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 80

   35 E: E ADDSUB • T

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    T       aller à l'état 94
    F       aller à l'état 61
    LValue  aller à l'état 62


État 81

   37 T: T DIVSTAR • F

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    F       aller à l'état 95
    LValue  aller à l'état 62


État 82

   25 Instr: '{' SuiteInstr '}' •

    $défaut  réduction par utilisation de la règle 25 (Instr)


État 83

   18 Instr: LValue '=' Exp • ';'
   27 Exp: Exp • OR TB

    OR   décalage et aller à l'état 75
    ';'  décalage et aller à l'état 96


État 84

   22 Instr: IDENT '(' Arguments ')' • ';'

    ';'  décalage et aller à l'état 97


État 85

   49 ListExp: ListExp ',' • Exp

    CHARACTER  décalage et aller à l'état 48
    NUM        décalage et aller à l'état 49
    IDENT      décalage et aller à l'état 50
    ADDSUB     décalage et aller à l'état 51
    '('        décalage et aller à l'état 53
    '!'        décalage et aller à l'état 54

    Exp     aller à l'état 98
    TB      aller à l'état 56
    FB      aller à l'état 57
    M       aller à l'état 58
    E       aller à l'état 59
    T       aller à l'état 60
    F       aller à l'état 61
    LValue  aller à l'état 62


État 86

   19 Instr: IF '(' Exp ')' • Instr
   20      | IF '(' Exp ')' • Instr ELSE Instr

    IDENT   décalage et aller à l'état 35
    IF      décalage et aller à l'état 36
    WHILE   décalage et aller à l'état 37
    RETURN  décalage et aller à l'état 38
    ';'     décalage et aller à l'état 39
    '{'     décalage et aller à l'état 40

    Instr   aller à l'état 99
    LValue  aller à l'état 43


État 87

   21 Instr: WHILE '(' Exp ')' • Instr
